@@ -1,12 +1,14 @@
 [
   {
     "input": {
-      "packagename": ["A"],
+      "packagename": [
+        "A"
+      ],
       "dbname": "mainline"
     },
     "output": {
       "code": "2001",
-      "data": {
+      "data": {"be_dict":{
         "A1": [
           "A",
           "0.0.23b",
@@ -147,13 +149,16 @@
           ]
         ]
       },
+      "not_found_packages": [
+      ],
       "msg": "Successful Operation!"
     }
+  }
   },
   {
     "input":{"packagename": ["A"], "dbname": "mainline", "level": "1"},
     "output": {"code": "2001",
-               "data": {"A1": ["A",
+               "data": {"be_dict": {"A1": ["A",
                                "0.0.23b",
                                "mainline",
                                [["D1", "install"],
@@ -180,6 +185,9 @@
                                "mainline",
                                [["D2", "install"], ["A2", "install"]]],
                         "D2": ["D", "0.11", "mainline", [[null, null]]]},
+      "not_found_packages": [
+        ],
                "msg": "Successful Operation!"}
+  }
   }
 ]
