@@ -1,3 +1,6 @@
+* Thu Dec 17 2020 Chengqiang Bao <baochengqiang1@huawei.com>
+- Add not_found_packages in output result for be depend interface
+
 * Mon Dec 14 2020 Chengqiang Bao <baochengqiang1@huawei.com>
 - Add level and batch query for build depend interface
 
